--- a/index.html
+++ b/index.html
@@ -65,5 +65,16 @@
       </div>
    </div>
   </section>
+
+  <section id="geral">
+    <div class="conainer">
+      <section>
+        
+      </section>
+      <aside>
+
+      </aside>
+    </div>
+  </section>
 </body>
 </html>
