--- a/index.html
+++ b/index.html
@@ -67,12 +67,36 @@
   </section>
 
   <section id="geral">
-    <div class="conainer">
+    <div class="container">
       <section>
-        
+        <div class="widget">
+          <div class="widget_title">
+            <div class="widget_title_text">Deparments</div>
+            <div class="widget_title_bar"></div>
+          </div>
+          <div class="widget_body">
+            ...
+          </div>
       </section>
+     
       <aside>
-
+        <div class="widget">
+          <div class="widget_title">
+            <div class="widget_title_text">Deparments</div>
+            <div class="widget_title_bar"></div>
+          </div>
+          <div class="widget_body">
+            ...
+          </div>
+          <div class="widget">
+            <div class="widget_title">
+              <div class="widget_title_text">Make An Appointment</div>
+              <div class="widget_title_bar"></div>
+            </div>
+            <div class="widget_body">
+              ...
+            </div>
+        </div>
       </aside>
     </div>
   </section>
