--- a/index.html
+++ b/index.html
@@ -74,31 +74,188 @@
             <div class="widget_title_text">Deparments</div>
             <div class="widget_title_bar"></div>
           </div>
-          <div class="widget_body">
-            ...
+
+          <div class="widget_body flex" >
+            <article>
+              <a href="">
+                <div class="news_data">
+                  <div class="news_posted_at">12 DEC 12</div>
+                  <div class="news_comments">2</div>
+                </div>
+                <div class="news_thumbnail">
+                  <img src="assets/img/img1.jpeg" alt="medico">
+                </div>
+                <div class="news_title">
+                  Loren ipsum dolor sit amat velum
+                </div>
+                <div class="news_resume">
+                  Lorem ipsum dolor sit amet consectetur 
+                  adipisicing elit. Sapiente placeat illo, 
+                  odio quas dolore sunt porro aliquam rerum fugiat 
+                  aut molestias quasi nam dolorum soluta est maxime 
+                  tempore dicta. Quibusdam!
+                </div>
+              </a>  
+            </article>
+
+            <article>
+              <a href="">
+                <div class="news_data">
+                  <div class="news_posted_at">12 DEC 12</div>
+                  <div class="news_comments">2</div>
+                </div>
+                <div class="news_thumbnail">
+                  <img src="assets/img/img1.jpeg" alt="medico">
+                </div>
+                <div class="news_title">
+                  Loren ipsum dolor sit amat velum
+                </div>
+                <div class="news_resume">
+                  Lorem ipsum dolor sit amet consectetur 
+                  adipisicing elit. Sapiente placeat illo, 
+                  odio quas dolore sunt porro aliquam rerum fugiat 
+                  aut molestias quasi nam dolorum soluta est maxime 
+                  tempore dicta. Quibusdam!
+                </div>
+              </a>  
+            </article>
+
+            <article>
+              <a href="">
+                <div class="news_data">
+                  <div class="news_posted_at">12 DEC 12</div>
+                  <div class="news_comments">2</div>
+                </div>
+                <div class="news_thumbnail">
+                  <img src="assets/img/img1.jpeg" alt="medico">
+                </div>
+                <div class="news_title">
+                  Loren ipsum dolor sit amat velum
+                </div>
+                <div class="news_resume">
+                  Lorem ipsum dolor sit amet consectetur 
+                  adipisicing elit. Sapiente placeat illo, 
+                  odio quas dolore sunt porro aliquam rerum fugiat 
+                  aut molestias quasi nam dolorum soluta est maxime 
+                  tempore dicta. Quibusdam!
+                </div>
+              </a>  
+            </article>
+
+            <article>
+              <a href="">
+                <div class="news_data">
+                  <div class="news_posted_at">12 DEC 12</div>
+                  <div class="news_comments">2</div>
+                </div>
+                <div class="news_thumbnail">
+                  <img src="assets/img/img1.jpeg" alt="medico">
+                </div>
+                <div class="news_title">
+                  Loren ipsum dolor sit amat velum
+                </div>
+                <div class="news_resume">
+                  Lorem ipsum dolor sit amet consectetur 
+                  adipisicing elit. Sapiente placeat illo, 
+                  odio quas dolore sunt porro aliquam rerum fugiat 
+                  aut molestias quasi nam dolorum soluta est maxime 
+                  tempore dicta. Quibusdam!
+                </div>
+              </a>  
+            </article>
           </div>
-      </section>
-     
-      <aside>
-        <div class="widget">
-          <div class="widget_title">
-            <div class="widget_title_text">Deparments</div>
-            <div class="widget_title_bar"></div>
-          </div>
-          <div class="widget_body">
-            ...
-          </div>
+
+      </section>   
+        <aside>
+
           <div class="widget">
             <div class="widget_title">
-              <div class="widget_title_text">Make An Appointment</div>
+              <div class="widget_title_text">Deparments</div>
+              <div class="widget_title_bar"></div>
+            </div>
+
+            <div class="widget_body">
+              <div class="widget_depart_body">
+                <div class="Depart_box">.</div><div class="Depart_box"></div>
+                <div class="Depart_box">.</div><div class="Depart_box"></div>
+                <div class="Depart_box">.</div><div class="Depart_box"></div>
+            </div>
+
+            <div class="widget">
+              <div class="widget_title">
+                <div class="widget_title_text">Make An Appointment</div>
+                <div class="widget_title_bar"></div>
+            </div>
+
+            <div class="widget_body">
+              <div class="widget_depart_body">
+                  <div class="Depart_box"></div><div class="Depart_box"></div>
+                  <div class="Depart_box"></div><div class="Depart_box"></div>
+                  <div class="Depart_box"></div><div class="Depart_box"></div>
+                  <div class="Depart_box"></div><div class="Depart_box"></div>                          
+              </div>
+            </div>
+        </aside>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container flexColumn">
+      <div class="footer_menu">
+        <div class="fm_1">
+          ...
+        </div>
+        <div class="fm_2">
+          ...
+        </div>
+        <div class="fm_3">
+          ...
+        </div>
+      </div>
+
+      <div class="footer_area">
+        <div class="footer_areaitem">
+          <div class="widget">
+            <div class="widget_title">
+              <div class="widget_title_text">Medicenter clinc</div>
               <div class="widget_title_bar"></div>
             </div>
             <div class="widget_body">
               ...
             </div>
         </div>
-      </aside>
+
+        <div class="footer_areaitem">
+          <div class="widget">
+            <div class="widget_title">
+              <div class="widget_title_text">latest Post clinc</div>
+              <div class="widget_title_bar"></div>
+            </div>
+            <div class="widget_body">
+              ...
+            </div>
+        </div>
+
+        <div class="footer_areaitem">
+          <div class="widget">
+            <div class="widget_title">
+              <div class="widget_title_text">Latest Tweets</div>
+              <div class="widget_title_bar"></div>
+            </div>
+            <div class="widget_body">
+              ...
+            </div>
+        </div>
+      </div>
     </div>
-  </section>
+  </footer>
+
+
+
+
+
+
+
+
 </body>
 </html>
