--- a/index.html
+++ b/index.html
@@ -1,261 +1,247 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/template.css">
-  <title>MediCenter</title>
+
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width,user-scalable=0" />
+
+<link rel="stylesheet" type="text/css" href="assets/css/template.css" />
+
+<script type="text/javascript">
+window.onload = function(){
+	document.querySelector(".menuMobile").addEventListener("click", function(){
+		if(document.querySelector(".menu nav ul").style.display == 'flex') {
+			document.querySelector(".menu nav ul").style.display = 'none';
+		} else {
+			document.querySelector(".menu nav ul").style.display = 'flex';
+		}
+	});
+};
+</script>
+
+<title>MediCenter</title>
+
 </head>
 <body>
-  <header>
-    <div class="container">
-      <div class="logo">
-        <a href="#"><img src="./assets/img/logo.png" alt="Logo do Site"></a>
-      </div>
-      <div class="menu">
-        <nav>
-          <ul>
-            <li class="active"><a href="#">HOME</a></li>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">HOME</a></li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-  </header>
 
-  <section id="banner">
-    <div class="container column">
-      <div class="banner-headline">
-        <h1>Top notch experience</h1>
-        <h2>Medicenter is a responsive template perfect for all screen sizes</h2>
-      </div>
+<header>
+	<div class="container">
+		<div class="logo">
+			<a href=""><img src="assets/images/logo.png" /></a>
+		</div>
+		<div class="menu">
+			<nav>
+				<div class="menuMobile">
+					<div class="mm_line"></div>
+					<div class="mm_line"></div>
+					<div class="mm_line"></div>
+				</div>
+				<ul>
+					<li class="active"><a href="">HOME</a></li>
+					<li><a href="">HOME</a></li>
+					<li><a href="">HOME</a></li>
+					<li><a href="">HOME</a></li>
+					<li><a href="">HOME</a></li>
+					<li><a href="">HOME</a></li>
+				</ul>
+			</nav>
+		</div>
+	</div>
+</header>
 
-      <div class="banner-options">
-        <div class="banner1">
-          <div class="banner-title">Emergency Case</div>
-          <div class="banner-desc">Algum texto qualquer</div>
-          <a href="#">Read more</a>
-        </div>
+<section id="banner">
+	<div class="container column">
+		<div class="banner_headline">
+			<h1>Top notch experience</h1>
+			<h2>Medicenter is a responsive template perfect for all screen sizes</h2>
+		</div>
+		<div class="banner_options">
+			<div class="banner1">
+				<div class="banner_title">Emergency Case</div>
+				<div class="banner_desc">Algum texto qualquer</div>
+				<a href="">Read more</a>
+			</div>
+			<div class="banner2">
+				<div class="banner_title">Doctors Timetable</div>
+				<div class="banner_desc">Algum texto qualquer</div>
+				<a href="">Read more</a>
+			</div>
+			<div class="banner3">
+				<div class="banner_title">Opening Hours</div>
+			</div>
+		</div>
+	</div>
+</section>
 
-        <div class="banner2">
-          <div class="banner-title">Doctors Timetable</div>
-          <div class="banner-desc">Algum texto qualquer</div>
-          <a href="#">Read more</a>
-        </div>
+<section id="geral">
+	<div class="container">
+		<section>
+			<div class="widget">
+				<div class="widget_title">
+					<div class="widget_title_text">Latest News</div>
+					<div class="widget_title_bar"></div>
+				</div>
+				<div class="widget_body flex">
+						
+					<article>
+						<a href="">
+							<div class="news_data">
+								<div class="news_posted_at">12 DEC 12</div>
+								<div class="news_comments">2</div>
+							</div>
+							<div class="news_thumbnail">
+								<img src="assets/images/dr.jpg" />
+							</div>
+							<div class="news_title">
+								Lorem ipsum dolor sit amat velum
+							</div>
+							<div class="news_resume">
+								It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
+								It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
+							</div>
+						</a>
+					</article>
 
-        <div class="banner3">
-          <div class="banner-title">Opening Hours</div>
+					<article>
+						<a href="">
+							<div class="news_data">
+								<div class="news_posted_at">12 DEC 12</div>
+								<div class="news_comments">2</div>
+							</div>
+							<div class="news_thumbnail">
+								<img src="assets/images/dr.jpg" />
+							</div>
+							<div class="news_title">
+								Lorem ipsum dolor sit amat velum
+							</div>
+							<div class="news_resume">
+								It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
+							</div>
+						</a>
+					</article>
 
-          <div class="weak">Monday - Friday
-            <div class="hour">8:00 - 17:00</div>
-          </div>
+					<article>
+						<a href="">
+							<div class="news_data">
+								<div class="news_posted_at">12 DEC 12</div>
+								<div class="news_comments">2</div>
+							</div>
+							<div class="news_thumbnail">
+								<img src="assets/images/dr.jpg" />
+							</div>
+							<div class="news_title">
+								Lorem ipsum dolor sit amat velum
+							</div>
+							<div class="news_resume">
+								It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
+							</div>
+						</a>
+					</article>
 
-          <div class="weak">Saturday
-            <div class="hour">9:30 - 17:30</div>
-          </div>
+					<article>
+						<a href="">
+							<div class="news_data">
+								<div class="news_posted_at">12 DEC 12</div>
+								<div class="news_comments">2</div>
+							</div>
+							<div class="news_thumbnail">
+								<img src="assets/images/dr.jpg" />
+							</div>
+							<div class="news_title">
+								Lorem ipsum dolor sit amat velum
+							</div>
+							<div class="news_resume">
+								It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
+							</div>
+						</a>
+					</article>
 
-          <div class="weak">Sunday
-            <div class="hour">9:30 - 15:00</div>
-          </div>
-        </div>
-      </div>
-   </div>
-  </section>
+				</div>
+			</div>
+		</section>
+		<aside>
+			<div class="widget">
+				<div class="widget_title">
+					<div class="widget_title_text">Deparments</div>
+					<div class="widget_title_bar"></div>
+				</div>
+				<div class="widget_body">
+					...
+				</div>
+			</div>
+			<div class="widget">
+				<div class="widget_title">
+					<div class="widget_title_text">Make An Appointment</div>
+					<div class="widget_title_bar"></div>
+				</div>
+				<div class="widget_body">
+					...
+				</div>
+			</div>
+		</aside>
+	</div>
+</section>
 
-  <section id="geral">
-    <div class="container">
-      <section>
-        <div class="widget">
-          <div class="widget_title">
-            <div class="widget_title_text">Deparments</div>
-            <div class="widget_title_bar"></div>
-          </div>
+<footer>
+	<div class="container flexColumn">
+		<div class="footer_menu">
+			<div class="fm_1">
+				<a href="">
+					...
+				</a>
+			</div>
+			<div class="fm_2">
+				<a href="">
+					...
+				</a>
+			</div>
+			<div class="fm_3">
+				<a href="">
+					...
+				</a>
+			</div>
+		</div>
 
-          <div class="widget_body flex" >
-            <article>
-              <a href="">
-                <div class="news_data">
-                  <div class="news_posted_at">12 DEC 12</div>
-                  <div class="news_comments">2</div>
-                </div>
-                <div class="news_thumbnail">
-                  <img src="assets/img/img1.jpeg" alt="medico">
-                </div>
-                <div class="news_title">
-                  Loren ipsum dolor sit amat velum
-                </div>
-                <div class="news_resume">
-                  Lorem ipsum dolor sit amet consectetur 
-                  adipisicing elit. Sapiente placeat illo, 
-                  odio quas dolore sunt porro aliquam rerum fugiat 
-                  aut molestias quasi nam dolorum soluta est maxime 
-                  tempore dicta. Quibusdam!
-                </div>
-              </a>  
-            </article>
+		<div class="footer_area">
+			<div class="footer_areaitem">
+				<div class="widget">
+					<div class="widget_title">
+						<div class="widget_title_text">Medicenter Clinic</div>
+						<div class="widget_title_bar"></div>
+					</div>
+					<div class="widget_body">
+						...
+					</div>
+				</div>
+			</div>
+			<div class="footer_areaitem">
+				<div class="widget">
+					<div class="widget_title">
+						<div class="widget_title_text">Latest Posts</div>
+						<div class="widget_title_bar"></div>
+					</div>
+					<div class="widget_body">
+						...
+					</div>
+				</div>
+			</div>
+			<div class="footer_areaitem">
+				<div class="widget">
+					<div class="widget_title">
+						<div class="widget_title_text">Latest Tweets</div>
+						<div class="widget_title_bar"></div>
+					</div>
+					<div class="widget_body">
+						...
+					</div>
+				</div>
+			</div>
+		</div>
 
-            <article>
-              <a href="">
-                <div class="news_data">
-                  <div class="news_posted_at">12 DEC 12</div>
-                  <div class="news_comments">2</div>
-                </div>
-                <div class="news_thumbnail">
-                  <img src="assets/img/img1.jpeg" alt="medico">
-                </div>
-                <div class="news_title">
-                  Loren ipsum dolor sit amat velum
-                </div>
-                <div class="news_resume">
-                  Lorem ipsum dolor sit amet consectetur 
-                  adipisicing elit. Sapiente placeat illo, 
-                  odio quas dolore sunt porro aliquam rerum fugiat 
-                  aut molestias quasi nam dolorum soluta est maxime 
-                  tempore dicta. Quibusdam!
-                </div>
-              </a>  
-            </article>
+		<div class="footer_copy">
+			Coyright - Todos os direitos reservados
+		</div>
 
-            <article>
-              <a href="">
-                <div class="news_data">
-                  <div class="news_posted_at">12 DEC 12</div>
-                  <div class="news_comments">2</div>
-                </div>
-                <div class="news_thumbnail">
-                  <img src="assets/img/img1.jpeg" alt="medico">
-                </div>
-                <div class="news_title">
-                  Loren ipsum dolor sit amat velum
-                </div>
-                <div class="news_resume">
-                  Lorem ipsum dolor sit amet consectetur 
-                  adipisicing elit. Sapiente placeat illo, 
-                  odio quas dolore sunt porro aliquam rerum fugiat 
-                  aut molestias quasi nam dolorum soluta est maxime 
-                  tempore dicta. Quibusdam!
-                </div>
-              </a>  
-            </article>
-
-            <article>
-              <a href="">
-                <div class="news_data">
-                  <div class="news_posted_at">12 DEC 12</div>
-                  <div class="news_comments">2</div>
-                </div>
-                <div class="news_thumbnail">
-                  <img src="assets/img/img1.jpeg" alt="medico">
-                </div>
-                <div class="news_title">
-                  Loren ipsum dolor sit amat velum
-                </div>
-                <div class="news_resume">
-                  Lorem ipsum dolor sit amet consectetur 
-                  adipisicing elit. Sapiente placeat illo, 
-                  odio quas dolore sunt porro aliquam rerum fugiat 
-                  aut molestias quasi nam dolorum soluta est maxime 
-                  tempore dicta. Quibusdam!
-                </div>
-              </a>  
-            </article>
-          </div>
-
-      </section>   
-        <aside>
-
-          <div class="widget">
-            <div class="widget_title">
-              <div class="widget_title_text">Deparments</div>
-              <div class="widget_title_bar"></div>
-            </div>
-
-            <div class="widget_body">
-              <div class="widget_depart_body">
-                <div class="Depart_box">.</div><div class="Depart_box"></div>
-                <div class="Depart_box">.</div><div class="Depart_box"></div>
-                <div class="Depart_box">.</div><div class="Depart_box"></div>
-            </div>
-
-            <div class="widget">
-              <div class="widget_title">
-                <div class="widget_title_text">Make An Appointment</div>
-                <div class="widget_title_bar"></div>
-            </div>
-
-            <div class="widget_body">
-              <div class="widget_depart_body">
-                  <div class="Depart_box"></div><div class="Depart_box"></div>
-                  <div class="Depart_box"></div><div class="Depart_box"></div>
-                  <div class="Depart_box"></div><div class="Depart_box"></div>
-                  <div class="Depart_box"></div><div class="Depart_box"></div>                          
-              </div>
-            </div>
-        </aside>
-    </div>
-  </section>
-
-  <footer>
-    <div class="container flexColumn">
-      <div class="footer_menu">
-        <div class="fm_1">
-          ...
-        </div>
-        <div class="fm_2">
-          ...
-        </div>
-        <div class="fm_3">
-          ...
-        </div>
-      </div>
-
-      <div class="footer_area">
-        <div class="footer_areaitem">
-          <div class="widget">
-            <div class="widget_title">
-              <div class="widget_title_text">Medicenter clinc</div>
-              <div class="widget_title_bar"></div>
-            </div>
-            <div class="widget_body">
-              ...
-            </div>
-        </div>
-
-        <div class="footer_areaitem">
-          <div class="widget">
-            <div class="widget_title">
-              <div class="widget_title_text">latest Post clinc</div>
-              <div class="widget_title_bar"></div>
-            </div>
-            <div class="widget_body">
-              ...
-            </div>
-        </div>
-
-        <div class="footer_areaitem">
-          <div class="widget">
-            <div class="widget_title">
-              <div class="widget_title_text">Latest Tweets</div>
-              <div class="widget_title_bar"></div>
-            </div>
-            <div class="widget_body">
-              ...
-            </div>
-        </div>
-      </div>
-    </div>
-  </footer>
-
-
-
-
-
-
-
-
+	</div>
+</footer>
 </body>
 </html>
